[project]
name = "theohe-epias"
version = "0.0.13"
authors = [
  { name="Onur Hakkı Eyüboğlu", email="eyubogluo@itu.edu.tr" },
]
description = "Energy Exchange Istanbul (EXIST) or Enerji Piyasaları İşletme A.Ş. (EPİAŞ) by its Turkish name is an energy exchange company."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "requests",
  "pandas",
  "pwinput"
]


[project.urls]
Homepage = "https://github.com/onurhakki/exist"
